Fix spacing issue, only index h1 has bottom margin

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -54,6 +54,9 @@ button#refresh {
 
 h1 {
   color: #ac4518;
+}
+
+h1#message {
   margin-bottom: 1rem;
 }
 
